--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -239,3 +239,6 @@ textarea:focus {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+// UI Primitives
+@import "../components/ui/ui.scss";
