--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,6 @@
+// Import variables first
+@import "./variables.scss";
+
 // Google Fonts imports for distinct category styling
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400;1,500&display=swap');
